# pragmatic-file-declutter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architect.md  backend.md  debugger.md  frontend.md  pm.md  reviewer.md  security.md  tester.md
.claude/commands/: build.md  review.md  test.md
.claude/skills/: api-cost.md  file-safety.md  photo-processing.md  security.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: KNOWLEDGE_BASE.md
src/pragmatic_file_declutter/: __init__.py  __main__.py
src/pragmatic_file_declutter/core/: __init__.py  dedup.py  feature_flags.py  file_ops.py  scanner.py
src/pragmatic_file_declutter/services/: __init__.py
src/pragmatic_file_declutter/ui/: __init__.py  app.py
src/pragmatic_file_declutter/ui/components/: __init__.py
src/pragmatic_file_declutter/ui/pages/: __init__.py  select_folder.py
tests/: __init__.py  test_dedup.py  test_file_ops.py  test_scanner.py
